[gd_scene load_steps=3 format=1]

[ext_resource path="res://addons/command_graph/editor/command_sequence_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/command_graph/editor/component/command_creation_popup.tscn" type="PackedScene" id=2]

[node name="Command Sequence Editor" type="MarginContainer"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 256, 256 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
no_sequence_label_path = NodePath("No Sequence Label")
sequence_container_path = NodePath("GraphEdit")
graph_edit_path = NodePath("GraphEdit")
command_creation_popup_path = NodePath("Command Creation Popup")

[node name="No Sequence Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 533.0
margin/right = 1440.0
margin/bottom = 547.0
text = "Load a CommandSequence resource to edit sequences."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GraphEdit" type="GraphEdit" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 1440.0
margin/bottom = 1080.0

[node name="Command Creation Popup" parent="." instance=ExtResource( 2 )]

visibility/visible = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 714.0
margin/top = 530.0
margin/right = 734.0
margin/bottom = 550.0

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]

[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]

[connection signal="popup_request" from="GraphEdit" to="." method="_on_graph_edit_popup_request"]

[connection signal="command_selected" from="Command Creation Popup" to="." method="_create_command_from_script"]


